--- a/nginx.conf
+++ b/nginx.conf
@@ -50,8 +50,8 @@ http {
         location /api/catalogue/ { proxy_pass http://catalogue.srikanth553.store:8080/; }
         location /api/user/ { proxy_pass http://user.srikanth553.store:8080/; }
         location /api/cart/ { proxy_pass http://cart.srikanth553.store:8080/; }
-        location /api/shipping/ { proxy_pass http://shipping.srikanth553.store:8080/; }
-        location /api/payment/ { proxy_pass http://payment.srikanth553.store:8080/; }
+        location /api/shipping/ { proxy_pass http://localhost:8080/; }
+        location /api/payment/ { proxy_pass http://localhost:8080/; }
 
         location /health {
           stub_status on;
