--- a/cart.service
+++ b/cart.service
@@ -4,7 +4,7 @@ Description = Cart Service
 User=roboshop
 // highlight-start
 Environment=REDIS_HOST=redis.srikanth553.store
-Environment=CATALOGUE_HOST=catalogue.srikant553.store
+Environment=CATALOGUE_HOST=catalogue.srikanth553.store
 Environment=CATALOGUE_PORT=8080
 // highlight-end
 ExecStart=/bin/node /app/server.js
