--- a/nginx.conf
+++ b/nginx.conf
@@ -48,8 +48,8 @@ http {
           try_files $uri /images/placeholder.jpg;
         }
         location /api/catalogue/ { proxy_pass http://catalogue.srikanth553.store:8080/; }
-        location /api/user/ { proxy_pass http://localhost:8080/; }
-        location /api/cart/ { proxy_pass http://localhost:8080/; }
+        location /api/user/ { proxy_pass http://user.srikanth553.store:8080/; }
+        location /api/cart/ { proxy_pass http://cart.srikanth553.store:8080/; }
         location /api/shipping/ { proxy_pass http://localhost:8080/; }
         location /api/payment/ { proxy_pass http://localhost:8080/; }
 
